# Amphion

./: .gitignore  __init__.py  amphion.py  pyproject.toml  requirements.txt
models/codec/: codec_inference.py  codec_trainer.py
models/codec/amphion_codec/: codec.py
models/codec/amphion_codec/quantize/: __init__.py  residual_vq.py
models/codec/facodec/: facodec_dataset.py  facodec_trainer.py
models/codec/kmeans/: repcodec_model.py
models/tts/maskgct/: __init__.py  config_file.py  gradio_demo.py  maskgct_inference.py  maskgct_s2a.py  maskgct_t2s.py  maskgct_utils.py
models/tts/maskgct/g2p/: g2p_generation.py
models/tts/maskgct/g2p/g2p/: __init__.py  cleaners.py  mandarin.py
src/amphion/models/: __init__.py
src/amphion/models/tts/maskgct/: maskgct_utils.py
