[project]
name = "amphion"
description = "Amphion"
license = { text = "MIT License" }
requires-python = ">=3.10"
version = "1.0.6"
authors = [{ name = "AndyRightNow", email = "test@test.com" }]
readme = "README.md"
keywords = ["TTS", "Speech"]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
  "setuptools",
  "natsort ~= 8.2.0",
  "rich ~= 12.6.0",
  "onnxruntime",
  "torch == 2.0.1",
  "transformers == 4.41.2",
  "accelerate == 0.24.1",
  "unidecode",
  "numpy == 1.26.0",
  "scipy == 1.12.0",
  "librosa",
  "safetensors",
  "encodec",
  "phonemizer",
  "g2p_en",
  "jieba",
  "cn2an",
  "pypinyin",
  "LangSegment",
  "pyopenjtalk",
  "pykakasi",
  "json5",
  "black == 24.1.1",
  "ruamel.yaml",
  "tqdm",
  "spaces",
  "gradio",
  "openai-whisper",
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["amphion.models", "amphion.utils"]